// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should render 1`] = `
<DocumentFragment>
  <div
    class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</DocumentFragment>
`;

exports[`Divider should render a dashed 1`] = `
<div>
  <div
    class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render horizontal type 1`] = `
<div>
  <div
    class="Divider-sc-19q4mlo-0 daSmjL border-theme-secondary-300 dark:border-theme-secondary-800"
    type="horizontal"
  />
</div>
`;

exports[`Divider should render vertical type 1`] = `
<div>
  <div
    class="Divider-sc-19q4mlo-0 gSJoMw border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and large 1`] = `
<div>
  <div
    class="Divider-sc-19q4mlo-0 jaeNcv border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;

exports[`Divider should render vertical type and small 1`] = `
<div>
  <div
    class="Divider-sc-19q4mlo-0 eBaEsS border-theme-secondary-300 dark:border-theme-secondary-800"
    type="vertical"
  />
</div>
`;
